client/styles/main.scss
/* ... */
.ant-calendar-picker-input.ant-input {
  width: 100% !important;
  max-width: 100%;
}
.info-content {
  height: auto;
  background-color: rgba(19,38,56,0.5);
  padding: 30px 20px 30px;

  .info-line {
    height: 54px;

    > div {
      float: left;
    }

    .info-field {

      .calendar {
        display: inline-block;
        margin-left: -20px;
        width: 8%;
        margin-top: -1px;
      }
    }
  }
}

.personnel {
  margin: 15px;

  .header-line {
    margin-bottom: 27px;
    overflow: hidden;

    img {
      float: left;
      width: 42%;
      margin-top: 7px;
    }

    .header-text {
      float: left;
      width: 16%;
      text-align: center;
      text-transform: uppercase;
    }
  }

  .personnel-content {

    .image-block {
      height: 400px;
      img {
        height: 100%;
        width: 6px;
      }
      .photo {
        width: 95%;
        height: 95%;
      }
    }
  }

  .platform-and-munitions-content {

    .image-block {
      height: 480px;

      img {
        height: 100%;
        width: 6px;
      }
      .photo {
        width: 96%;
        height: 95%;
        padding: 0 17px;
      }
    }
  }
}

.coms-net {
  margin: 20px;

  .coms-net-content {
    width: 100%;
  }

  .header-line {
    margin-bottom: 40px;

    img {
      float: left;
      width: 42%;
      margin-top: 7px;
    }

    .header-text {
      float: left;
      width: 16%;
      text-align: center;
      text-transform: uppercase;
    }
  }

  .map-buttons {
    float: left;
    margin-top: 30px;

    > div {
      text-align: right;
      text-transform: uppercase;
      display: block;
      margin-bottom: 20px;
    }

    button {
      min-width: 120px;
      margin: 6px 5px 5px 0;
    }

    .sub-button {
      margin-bottom: 15px;
      background: url(/assets/img/admin/grey_shape_small.png) no-repeat;
      text-transform: uppercase;
      padding: 3px 0 3px 7px;
      color: white;
      height: 51px;
      width: 92px;
      margin-left: 42px;
      background-size: 100% 100%;
      margin-top: -3px;
      cursor: pointer;

      button {
        min-width: 80px;
      }
    }

    .highlighted-sub-button {
      background: url(/assets/img/admin/orange_shape_small.png) no-repeat;
      background-size: 100% 100%;

      button {
        color: #002134;
        background-color: #ed7d31;
      }
    }

    .main-button {
      background: url(/assets/img/admin/grey_shape_big.png) no-repeat;
      text-transform: uppercase;
      padding: 4px 0 3px 7px;
      color: white;
      height: 51px;
      background-size: 100% 100%;
      margin-top: -3px;
      cursor: pointer;

    }

    .highlighted-main-button {
      background: url(/assets/img/admin/orange_shape_big.png) no-repeat;
      background-size: 100% 100%;

      button {
        color: #002134;
        background-color: #ed7d31;
      }
    }

  }

  .map {
    overflow: hidden;

    img {
      border: 2px solid #92bfe8;
      width: 100%;
    }
  }
}

.sys-config{
  margin: 15px;


  .header-line {
    margin-bottom: 27px;
    overflow: hidden;

    img {
      float: left;
      width: 42%;
      margin-top: 7px;
    }

    .header-text {
      float: left;
      width: 16%;
      text-align: center;
      text-transform: uppercase;
    }
  }

  .button-block{

    .header-line{
      overflow: hidden;

      img {
        float: left;
        width: 20%;
        margin-top: 7px;
      }

      .header-text {
        float: left;
        width: 60%;
        text-align: center;
        text-transform: uppercase;
      }
    }

    .config-buttons{

      padding: 20px;
      margin-bottom: 30px;
      text-align: center;
      background-color: rgba(19,38,56,.5);

      button {
        margin-top: 5px;
        margin-bottom: 5px;
        margin-right: 0!important;
        width: 70%;
      }

      .menu-button {
        width: 100%;
        margin: 15px 0px;
      }

      .highlighted-button {

      }

      .highlighted-button:hover{
        background-color: #ed7d31;
      }

      .line {
        display: block;
        width: 72%;
        margin: auto;
        height: 5px;
      }
    }

  }

  .check-block{
    .header-line{
      overflow: hidden;

      img {
        float: left;
        width: 20%;
        margin-top: 7px;
        height: 11px;
      }

      .header-text {
        float: left;
        width: 60%;
        text-align: center;
        text-transform: uppercase;
      }


    }


    .check-status{
      height:649px;
    }
  }
}
/* ... */

